# flood-predictor

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  pyproject.toml
src/: demo.py  flood_model.pth  flood_predictor.py  hour_prediction_model.pth  lib.rs  main.rs  readme.md  tcn_flood_model.pth
src/flood_predictor/: __init__.py  __main__.py  app.py
