[project]
name = "flood-predictor"
version = "0.1.0"
authors = [
    { name = "Jason Pena", email = "jpalex@nmsu.edu" },
    { name = "Vincent Sanchez", email = "vsanche1@nsmu.edu" },
    { name = "Carlos Ramirez", email = "carloj03@nmsu.edu" },
]
description = "Tooling for SI-LSPIV project"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["hydrology", ""]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas",
    "numpy",
    "torch",
]

[project.scripts]
flood-predictor = "flood_predictor.__main__:main"
flood-predictor-app = "flood_predictor.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/flood_predictor"
]
